update: python 60.md

--- a/python/contents/60.md
+++ b/python/contents/60.md
@@ -2,7 +2,7 @@
 
 - 全局命令 (Anywhere on your computer) $ `scrapy -h` 或 $ `scrapy -help`
 
-```log
+```shell
 Johnny:~ johnny$ scrapy -h
 Scrapy 1.8.0 - no active project
 
@@ -27,7 +27,7 @@ Use "scrapy <command> -h" to see more info about a command
 
 - 项目命令 (Only in your project) $ `scrapy -h` 或 $ `scrapy -help`
 
-```log
+```shell
 Johnny:sp_pro1 johnny$ scrapy -h
 Scrapy 1.8.0 - project: sp_pro1
 
@@ -97,7 +97,7 @@ $ `scrapy shell http://www.baidu.com`
 
 示例：
 
-```log
+```shell
 scrapy shell http://www.baidu.com
 ...
 ...
@@ -107,7 +107,6 @@ scrapy shell http://www.baidu.com
 'http://www.baidu.com'
 >>> response.xpath("//title/text()")
 [<Selector xpath='//title/text()' data='百度一下，你就知道'>]
-
 ```
 
 ### 常用scrapy命令：
@@ -127,7 +126,7 @@ scrapy shell http://www.baidu.com
 
 	项目目录
 
-	```log
+	```
 	sp_pro1
 	├── sp_pro1
 	│   ├── __init__.py
@@ -149,7 +148,7 @@ scrapy shell http://www.baidu.com
 
 	新的目录结构
 
-	```log
+	```
 	├── sp_pro1
 	│   ├── __init__.py
 	│   ├── __pycache__
@@ -194,7 +193,7 @@ scrapy shell http://www.baidu.com
 
 - ③、进入items.py创建自己的Item容器类
     * Item是保存爬取数据的容器，它的使用方法和字典类型，但相比字典多了些保护机制。
-    * 创建Item需要继承scrapy.Item类，并且定义类型为scrapy.Field的字段：（标题、地址、开盘时间、浏览次数、单价）
+    * 创建Item需要继承scrapy.Item类，并且定义类型为scrapy.Field的字段：（标题、开盘时间、单价）
 
 	```python
 	# 具体代码如下：
@@ -202,9 +201,7 @@ scrapy shell http://www.baidu.com
 	class FangItem(scrapy.Item):
 	    # define the fields for your item here like:
 	    title = scrapy.Field()
-	    address = scrapy.Field()
 	    time = scrapy.Field()
-	    clicks = scrapy.Field()
 	    price = scrapy.Field()
 	```
 
@@ -229,9 +226,7 @@ scrapy shell http://www.baidu.com
 	        for vo in hlist:
 	            item = FangItem()
 	            item['title'] =  vo.css("h3.fontS20 a::text").extract_first()
-	            item['address'] =  vo.css("span.addressName::text").extract_first()
 	            item['time'] =  vo.re("<span>(.*?)开盘</span>")[0]
-	            item['clicks'] =  vo.re("<span><i>([0-9]+)</i>浏览</span>")[0]
 	            item['price'] =  vo.css("i.fontS24::text").extract_first()
 	            #print(item)
 	            yield item
@@ -244,13 +239,13 @@ scrapy shell http://www.baidu.com
         * 验证抓取数据，检查抓取字段
         * 查重并丢弃重复内容
         * 将爬取结果保存到数据库里
-    * 执行爬取命令来进行爬取信息。
+    * 执行爬取命令来进行爬取信息
 
 - ⑥、运行
     * 执行如下命令来启用数据爬取 $ `scrapy crawl fang`
     * 将结果保存到文件中: 格式：json、csv、xml、pickle、marshal等
     
-    ```python
+    ```shell
         scrapy crawl fang -o fangs.json
         scrapy crawl fang -o fangs.csv
         scrapy crawl fang -o fangs.xml
