update: python 60.md

--- a/python/contents/60.md
+++ b/python/contents/60.md
@@ -306,6 +306,4 @@ class YoudaoSpider(scrapy.Spider):
         input("按任意键继续")
 ```
 
-注意事项：
-
-如果不写`start_urls`属性, 那么`start_requests`方法会自动被调用, 所以上文注释了`start_urls`
+注意事项：如果不写`start_urls`属性, 那么`start_requests`方法会自动被调用, 所以上文注释了`start_urls`
