update: python 62.md

--- a/python/contents/62.md
+++ b/python/contents/62.md
@@ -236,3 +236,5 @@ class WenkuSpider(scrapy.Spider):
             # url = response.urljoin(next_url) # 构建绝对url地址（这里可省略）
             yield scrapy.Request(url=url,callback=self.parse)
 ```
+
+[点击这里查看代码地址](https://github.com/johnnynode/python-spider/tree/master/basic/contents/code/wenku_search)
