update: python 64.md

--- a/python/contents/64.md
+++ b/python/contents/64.md
@@ -31,6 +31,8 @@ SPIDER_MIDDLEWARES = {
 编写spider中间件十分简单。每个中间件组件是一个定义了以下一个或多个方法的Python类:
 来自类：class scrapy.contrib.spidermiddleware.SpiderMiddleware
 
+Spider Middleware 有四个核心方法：
+
 1 ）**process_spider_input(response, spider)**
 
 - 当response通过spider中间件时，该方法被调用，处理该response。
