update: python 68.md

--- a/python/contents/68.md
+++ b/python/contents/68.md
@@ -22,6 +22,12 @@
 - 打开源代码查看，发现代码非常少，经过构建程序处理过，并且所有数据都是后加载出来的
 - 此方案不可取
 
+<img width="400" src="" />
+
+<img width="400" src="" />
+
+（方案1 图例）
+
 方案2
 - 解析ajax请求数据并进行处理
 - **列表接口**举例：`https://careers.tencent.com/tencentcareer/api/post/Query?timestamp=1578972041752&countryId=1&cityId=&bgIds=&productId=&categoryId=&parentCategoryId=&attrId=&keyword=&pageIndex=1&pageSize=10&language=zh-cn&area=cn`
@@ -30,6 +36,12 @@
 - 经分析我们可以从列表页接口中拿id, 从详情页接口中获取数据即可
 - 此接口可直接访问，没做反爬和权限验证处理, 如下图
 - 此方案可行
+
+<img width="400" src="" />
+
+<img width="400" src="" />
+
+（方案2 图例）
 
 备注：
 
