update: python 68.md

--- a/python/contents/68.md
+++ b/python/contents/68.md
@@ -2,20 +2,20 @@
 
 本项目通过Scrapy框架的爬虫实战案例来巩固练习
 
-任务：
+**任务：**
 
 - 爬取`careers.tencent.com`中关于指定条件的所有社会招聘信息
 - 搜索条件为`中国`
-- AI关键字的就业岗位
+- `AI`关键字的就业岗位
 - 并将信息存储到MySql数据库中
 - 地址：https://careers.tencent.com
 
-步骤：
+**步骤：**
 
 - 首先爬取每页的招聘信息列表
 - 再爬取对应的招聘详情信息
 
-分析：
+**分析：**
 
 方案1
 - 经过页面分析详情页所需id可在列表页分享下结构的div中获取(如果页面上没有具体链接地址，那么跳转程序就很可能在js脚本中或者跳转地址在接口数据中) 
