add: python 69.md

--- a/python/contents/69.md
+++ b/python/contents/69.md
@@ -1,26 +1,26 @@
 ### Selenium库的介绍
 
-- Selenium是一个自动化测试工具，利用它可以驱动浏览器执行特定的动作，如点击，下拉，等操作。
-- Selenium可以获取浏览器当前呈现的页面源代码，做到可见既可爬，对应JavaScript动态渲染的信息爬取非常有效。
+- Selenium是一个自动化测试工具，利用它可以驱动浏览器执行特定的动作，如点击，下拉，等操作
+- Selenium可以获取浏览器当前呈现的页面源代码，做到可见既可爬，对应JavaScript动态渲染的信息爬取非常有效
 - 官方网址：http://www.seleniumhq.org
 - 官方文档：http://selenium-python.readthedocs.io
 - 中文文档：http://selenium-python-zh.readthedocs.io
 - 安装：$ `pip3 install selenium` (注：此处是默认mac下的python3环境执行的命令)
-- Selenium支持非常多的浏览器，如Chrome、Firefox、Edge等，还支持无界面浏览器PhantomJS。
+- Selenium支持非常多的浏览器，如Chrome、Firefox、Edge等，还支持无界面浏览器PhantomJS
 - ChromeDriver浏览器驱动的安装：（注意浏览器版本：）
-- 首先查看当前谷歌Chrome浏览器的版本V61~V67(对应2.35~2.38)，再到下面网址下载
+- 首先查看当前谷歌Chrome浏览器的版本，再到下面网址下载, 注意查看对应的版本信息
 - 网址：https://chromedriver.storage.googleapis.com/index.html
-- Windows安装：将解压的文件：chromedriver.exe 放置到Python的Scripts目录下。
+- Windows安装：将解压的文件：chromedriver.exe 放置到Python的Scripts目录下
 - Mac/Linux安装：将解压的文件：chromedriver 放置到/usr/local/bin/目录下
 - PhantomJS驱动的下载地址：http://phantomjs.org/download.html
 
 ### 动态渲染页面爬取
 
-- 对于访问Web时直接响应的数据（就是response内容可见），我们使用urllib、requests或Scrapy框架爬取。
-- 对应一般的JavaScript动态渲染的页面信息（Ajax加载），我们可以通过分析Ajax请求来抓取信息。
-- 即使通过Ajax获取数据，但还有会部分加密参数，后期经过JavaScript计算生成内容，导致我们难以直接找到规律，如淘宝页面，58同城部分信息。
-- 为了解决这些问题，我们可以直接使用模拟浏览器运行的方式来实现信息获取。
-- 除了`Selenium`之外在Python中有许多模拟浏览器运行库，如：Splash、PyV8、Ghost等。
+- 对于访问Web时直接响应的数据（就是response内容可见），我们使用urllib、requests或Scrapy框架爬取
+- 对应一般的JavaScript动态渲染的页面信息（Ajax加载），我们可以通过分析Ajax请求来抓取信息
+- 即使通过Ajax获取数据，但还有会部分加密参数，后期经过JavaScript计算生成内容，导致我们难以直接找到规律，如淘宝页面，58同城部分信息
+- 为了解决这些问题，我们可以直接使用模拟浏览器运行的方式来实现信息获取
+- 除了`Selenium`之外在Python中有许多模拟浏览器运行库，如：Splash、PyV8、Ghost等
 
 ### Selenium的使用
 
@@ -220,7 +220,7 @@ driver.execute_script('window.alert("Hello Selenium!")')
 
 ```python
 from selenium import webdriver
-from selenium.webdriver import ActionChains
+# from selenium.webdriver import ActionChains
 
 #创建浏览器对象
 driver = webdriver.Chrome()
@@ -243,7 +243,7 @@ print(input.size)     #获取节点的大小
 9 ) 切换Frame
 
 - 网页中有一种节点叫做iframe，也就是子Frame，他可以将一个页面分成多个子父界面。
-- 我们可以使用`switch_to.frame()`来切换Frame界面，实例详见上面动态链案例
+- 我们可以使用`switch_to.frame()`来切换Frame界面，实例详见上面动态链案例。
 
 10 ） 延迟等待
 
@@ -259,9 +259,9 @@ print(input.size)     #获取节点的大小
     driver.implicitly_wait(2) 
     #加载请求指定url地址
     driver.get("https://www.zhihu.com/explore")
-    #获取节点    
-    input = driver.find_element_by_id("zu-top-add-question")
-    print(input.text) #获取节点间内容
+    #获取节点
+    input = driver.find_element_by_id("Popover1-toggle")
+    print(input) # 获取节点间内容
 
     #driver.close()
     ```
@@ -279,9 +279,9 @@ print(input.size)     #获取节点的大小
     driver.get("https://www.zhihu.com/explore")
     #显式等待,最长10秒
     wait = WebDriverWait(driver,10)
-    #等待条件：10秒内必须有个id属性值为zu-top-add-question的节点加载出来，否则抛异常。
-    input = wait.until(EC.presence_of_element_located((By.ID,'zu-top-add-question')))
-    print(input.text) #获取节点间内容
+    #等待条件：10秒内必须有个id属性值为Popover1-toggle的节点加载出来，否则抛异常。
+    input = wait.until(EC.presence_of_element_located((By.ID,'Popover1-toggle')))
+    print(input) #获取节点间内容
     #driver.close()
     ```
 
@@ -315,7 +315,7 @@ driver = webdriver.Chrome()
 #加载请求指定url地址
 driver.get("https://www.zhihu.com/explore")
 print(driver.get_cookies())
-driver.add_cookie({'name':'namne','domain':'www.zhihu.com','value':'zhangsan'})
+driver.add_cookie({'name':'Joh','domain':'www.zhihu.com','value':'zhangsan'})
 print(driver.get_cookies())
 driver.delete_all_cookies()
 print(driver.get_cookies())
@@ -378,6 +378,8 @@ finally:
 
 2) 代码实现
 
+注：下面的代码应该不能正确运行，因为淘宝已对Selenium做了相关封禁处理，可以自行在网络上寻找解决方案
+
 ```python
 '''通过关键字爬取淘宝网站的信息数据'''
 from selenium import webdriver
@@ -388,7 +390,7 @@ from selenium.webdriver.support.wait import WebDriverWait
 from pyquery import PyQuery as pq
 from urllib.parse import quote
 
-KEYWORD = "ipad"
+KEYWORD = "mac"
 MAX_PAGE = 10
 
 # browser = webdriver.Chrome()
@@ -418,7 +420,6 @@ def index_page(page):
         get_products()
     except TimeoutException:
         index_page(page)
-
 
 def get_products():
     '''提取商品数据'''
@@ -464,10 +465,12 @@ if __name__ == '__main__':
 
 2 ） 创建项目
 
-- 首先新建项目，名为scrapyseleniumtest：$ `scrapy startproject scrapyseleniumtest`
+说明：需要特别注意解决淘宝对selenium的封禁处理，需要网上自行寻找解决方案(网上很多)，并将配置加入代码中
+
+- 首先新建项目，名为scrapyselenium：$ `scrapy startproject scrapyselenium`
 - 进入项目目录下，创建一个Spider（爬虫类）：
     ```shell
-    cd srapytseleniumtest
+    cd srapytselenium
     scrapy genspider taobao www.baobao.com
     ```
 - 进入settings.py的配置文件：将ROBOTSTXT_OBEY改为false, $`ROBOTSTXT_OBEY = False`
@@ -480,7 +483,6 @@ from scrapy import Item, Field
 
 class ProductItem(Item):
     collection = 'products'
-
     image = Field()
     price = Field()
     deal = Field()
@@ -502,7 +504,7 @@ class ProductItem(Item):
     # -*- coding: utf-8 -*-
     from scrapy import Request, Spider
     from urllib.parse import quote
-    from scrapyseleniumtest.items import ProductItem
+    from scrapyselenium.items import ProductItem
 
     class TaobaoSpider(Spider):
         name = 'taobao'
@@ -584,221 +586,9 @@ class ProductItem(Item):
 
     ```python
     DOWNLOADER_MIDDLEWARES = {
-        'scrapyseleniumtest.middlewares.SeleniumMiddleware': 543,
+        'scrapyselenium.middlewares.SeleniumMiddleware': 543,
     }
     ```
-
-- 解析页面信息
-
-```python
-# -*- coding: utf-8 -*-
-from scrapy import Request, Spider
-from urllib.parse import quote
-from scrapyseleniumtest.items import ProductItem
-
-class TaobaoSpider(Spider):
-    name = 'taobao'
-    allowed_domains = ['www.taobao.com']
-    base_url = 'https://s.taobao.com/search?q='
-
-    def start_requests(self):
-        for keyword in self.settings.get('KEYWORDS'):
-            for page in range(1, self.settings.get('MAX_PAGE') + 1):
-                url = self.base_url + quote(keyword)
-                yield Request(url=url, callback=self.parse, meta={'page': page}, dont_filter=True)
-
-    def parse(self, response):
-        products = response.xpath(
-            '//div[@id="mainsrp-itemlist"]//div[@class="items"][1]//div[contains(@class, "item")]')
-        for product in products:
-            item = ProductItem()
-            item['price'] = ''.join(product.xpath('.//div[contains(@class, "price")]//text()').extract()).strip()
-            item['title'] = ''.join(product.xpath('.//div[contains(@class, "title")]//text()').extract()).strip()
-            item['shop'] = ''.join(product.xpath('.//div[contains(@class, "shop")]//text()').extract()).strip()
-            item['image'] = ''.join(product.xpath('.//div[@class="pic"]//img[contains(@class, "img")]/@data-src').extract()).strip()
-            item['deal'] = product.xpath('.//div[contains(@class, "deal-cnt")]//text()').extract_first()
-            item['location'] = product.xpath('.//div[contains(@class, "location")]//text()').extract_first()
-            yield item
-```
-
-6 ） 存储结果
-
-```python
-import pymongo
-
-class MongoPipeline(object):
-    def __init__(self, mongo_uri, mongo_db):
-        self.mongo_uri = mongo_uri
-        self.mongo_db = mongo_db
-
-    @classmethod
-    def from_crawler(cls, crawler):
-        return cls(mongo_uri=crawler.settings.get('MONGO_URI'), mongo_db=crawler.settings.get('MONGO_DB'))
-
-    def open_spider(self, spider):
-        self.client = pymongo.MongoClient(self.mongo_uri)
-        self.db = self.client[self.mongo_db]
-
-    def process_item(self, item, spider):
-        self.db[item.collection].insert(dict(item))
-        return item
-
-    def close_spider(self, spider):
-        self.client.close()
-```
-
-7 ) 配置文件信息
-
-```python
-ITEM_PIPELINES = {
-    'scrapyseleniumtest.pipelines.MongoPipeline': 300,
-}
-
-KEYWORDS = ['iPad']
-MAX_PAGE = 100
-SELENIUM_TIMEOUT = 20
-PHANTOMJS_SERVICE_ARGS = ['--load-images=false', '--disk-cache=true']
-MONGO_URI = 'localhost'
-MONGO_DB = 'taobao'
-```
-
-### Scrapy框架中使用Selenium
-
-1 ） 任务
-
-通过Scrapy框架使用Selenium，以PhantomJS进行演示，爬取淘宝商品信息案例，并将信息存入数据库MongoDB中
-
-2 ） 创建项目
-
-首先新建项目，名为scrapyseleniumtest：$ `scrapy startproject scrapyseleniumtest`
-进入项目目录下，创建一个Spider（爬虫类）：
-    ```python
-    cd srapytseleniumtest
-    scrapy genspider taobao www.baobao.com
-    ```
-
-进入settings.py的配置文件：将ROBOTSTXT_OBEY改为false $ `ROBOTSTXT_OBEY = False`
-
-3 ) 定义Item类
-
-```python
-# 定义信息封装类（图片、价格、购买人数、标题、店铺、发货源）
-from scrapy import Item, Field
-
-class ProductItem(Item):
-
-    collection = 'products'
-
-    image = Field()
-    price = Field()
-    deal = Field()
-    title = Field()
-    shop = Field()
-    location = Field()
-```
-
-4 )  解析页面
-
-在配置文件settings.py最后面定义搜索关键字和最大页码数信息：
-
-```python
-KEYWORDS = ['mac']
-MAX_PAGE = 100
-```
-
-进入spider/taobao.py文件中编写
-
-```python
-# -*- coding: utf-8 -*-
-from scrapy import Request, Spider
-from urllib.parse import quote
-from scrapyseleniumtest.items import ProductItem
-
-class TaobaoSpider(Spider):
-    name = 'taobao'
-    allowed_domains = ['www.taobao.com']
-    base_url = 'https://s.taobao.com/search?q='
-
-    def start_requests(self):
-        for keyword in self.settings.get('KEYWORDS'):
-            for page in range(1, self.settings.get('MAX_PAGE') + 1):
-                url = self.base_url + quote(keyword)
-                yield Request(url=url, callback=self.parse, meta={'page': page}, dont_filter=True)
-
-    def parse(self, response):
-        pass
-```
-
-5 ) 对接Selenium
-
-通过定义DownloaderMiddleware中间件来实现对Selenium的使用。
-
-```python
-# -*- coding: utf-8 -*-
-
-from selenium import webdriver
-from selenium.common.exceptions import TimeoutException
-from selenium.webdriver.common.by import By
-from selenium.webdriver.support.ui import WebDriverWait
-from selenium.webdriver.support import expected_conditions as EC
-from scrapy.http import HtmlResponse
-from logging import getLogger
-
-
-class SeleniumMiddleware():
-    def __init__(self, timeout=None, service_args=[]):
-        self.logger = getLogger(__name__)
-        self.timeout = timeout
-        self.browser = webdriver.PhantomJS(service_args=service_args)
-        self.browser.set_window_size(1400, 700)
-        self.browser.set_page_load_timeout(self.timeout)
-        self.wait = WebDriverWait(self.browser, self.timeout)
-
-    def __del__(self):
-        self.browser.close()
-
-    def process_request(self, request, spider):
-        """
-        用PhantomJS抓取页面
-        :param request: Request对象
-        :param spider: Spider对象
-        :return: HtmlResponse
-        """
-        self.logger.debug('PhantomJS is Starting')
-        page = request.meta.get('page', 1)
-        try:
-            self.browser.get(request.url)
-            if page > 1:
-                input = self.wait.until(
-                    EC.presence_of_element_located((By.CSS_SELECTOR, '#mainsrp-pager div.form > input')))
-                submit = self.wait.until(
-                    EC.element_to_be_clickable((By.CSS_SELECTOR, '#mainsrp-pager div.form > span.btn.J_Submit')))
-                input.clear()
-                input.send_keys(page)
-                submit.click()
-            self.wait.until(
-                EC.text_to_be_present_in_element((By.CSS_SELECTOR, '#mainsrp-pager li.item.active > span'), str(page)))
-            self.wait.until(EC.presence_of_element_located((By.CSS_SELECTOR, '.m-itemlist .items .item')))
-            return HtmlResponse(url=request.url, body=self.browser.page_source, request=request, encoding='utf-8',
-                                status=200)
-        except TimeoutException:
-            return HtmlResponse(url=request.url, status=500, request=request)
-
-    @classmethod
-    def from_crawler(cls, crawler):
-        return cls(timeout=crawler.settings.get('SELENIUM_TIMEOUT'),
-                   service_args=crawler.settings.get('PHANTOMJS_SERVICE_ARGS'))
-
-```
-
-在settings.py配置文件中.设置我们自定义的中间件设置
-
-```python
-DOWNLOADER_MIDDLEWARES = {
-    'scrapyseleniumtest.middlewares.SeleniumMiddleware': 543,
-}
-
-```
 
 6 ) 解析页面信息
 
@@ -806,14 +596,12 @@ DOWNLOADER_MIDDLEWARES = {
 # -*- coding: utf-8 -*-
 from scrapy import Request, Spider
 from urllib.parse import quote
-from scrapyseleniumtest.items import ProductItem
-
+from scrapyselenium.items import ProductItem
 
 class TaobaoSpider(Spider):
     name = 'taobao'
     allowed_domains = ['www.taobao.com']
     base_url = 'https://s.taobao.com/search?q='
-
 
     def start_requests(self):
         for keyword in self.settings.get('KEYWORDS'):
@@ -835,24 +623,22 @@ class TaobaoSpider(Spider):
             yield item
 ```
 
-7 ) 存储结果
+7 ） 存储结果
 
 配置文件信息
 
 ```python
 ITEM_PIPELINES = {
-    'scrapyseleniumtest.pipelines.MongoPipeline': 300,
+    'scrapyselenium.pipelines.MongoPipeline': 300,
 }
 
-KEYWORDS = ['iPad']
+KEYWORDS = ['mac']
 MAX_PAGE = 100
 SELENIUM_TIMEOUT = 20
 PHANTOMJS_SERVICE_ARGS = ['--load-images=false', '--disk-cache=true']
 MONGO_URI = 'localhost'
 MONGO_DB = 'taobao'
 ```
-
-最终代码实现
 
 ```python
 import pymongo
@@ -876,5 +662,4 @@ class MongoPipeline(object):
 
     def close_spider(self, spider):
         self.client.close()
-
 ```
