update: python 71.md

--- a/python/contents/71.md
+++ b/python/contents/71.md
@@ -1,6 +1,6 @@
 ### 代理服务
 
-- 我们在做爬虫的过程中经常最初爬虫都正常运行，正常爬取数据，一切看起来都是美好，然而一杯茶的功夫就出现了错误。
+- 我们在做爬虫的过程中经常最初爬虫都正常运行，正常爬取数据，一切看起来都是美好，然而一会儿功夫就出现了错误。
 
 - 如：403 Forbidden错误，“您的IP访问频率太高”错误，或者跳出一个验证码让我们输入，之后解封，但过一会又出现类似情况。
 
@@ -148,7 +148,7 @@ except requests.exceptions.ConnectionError as e:
 import requests
 
 # 从代理服务中获取一个代理IP
-proxy =  requests.get("http://tvp.daxiangdaili.com/ip/?tid=559775358931681&num=1").text
+proxy =  requests.get("http://tvp.daxiangdaili.com/ip/?tid=此处填写订单号&num=1").text
 proxies = {
     'http': 'http://' + proxy,
     'https': 'https://' + proxy,
@@ -164,16 +164,15 @@ except requests.exceptions.ConnectionError as e:
 
 - 创建scrapy项目：$ `scrapy startproject httpbin`
 
-- 创建爬虫文件
-    创建项目
+- 创建爬虫项目
     ```shell
     cd httpbin
     scrapy genspider hb httpbin.org
     ```
 
-    编写代码
+- 编写代码
+    编写爬虫文件hb.py
     ```python
-    #编写爬虫文件hb.py
     import scrapy
 
     class HbSpider(scrapy.Spider):
@@ -183,19 +182,22 @@ except requests.exceptions.ConnectionError as e:
 
         def parse(self, response):
             print(response.body)
+    ```
 
-    #编写中间件文件：middlewares.py 
+    编写中间件文件：middlewares.py
+    ```python
     class HttpbinProxyMiddleware(object):
         def process_request(self, request, spider):
             pro_addr = requests.get('http://127.0.0.1:5000/get').text
             request.meta['proxy'] = 'http://' + pro_addr
+    ```
 
-    #修改配置文件settings.py
-
+    修改配置文件settings.py
+    ```python
     ROBOTSTXT_OBEY = False #关闭爬虫协议
 
     DOWNLOADER_MIDDLEWARES = {
-    'httpbin.middlewares.HttpbinProxyMiddleware': 543,
+        'httpbin.middlewares.HttpbinProxyMiddleware': 543,
     }
 
     #关闭终端输出，改输出到指定日志文件中
@@ -296,6 +298,7 @@ class WxSpider(scrapy.Spider):
 
 3.4 存储结果
 
+首先开启相关配置, 修改配置文件settings.py信息：（开启MongoPipeline管道类，设置MongoDB的连接信息）
 ```python
 ITEM_PIPELINES = {
     'scrapyseleniumtest.pipelines.MongoPipeline': 300,
@@ -307,6 +310,7 @@ MONGO_DB = 'weixin'
 
 ```
 
+针对pipeline文件进行编写
 ```python
 import pymongo
 
@@ -337,8 +341,6 @@ class MongoPipeline(object):
         '''Spider关闭时自动调用，负责关闭MongoDB的连接'''
         self.client.close()
 ```
-
-- 修改配置文件settings.py信息：（开启MongoPipeline管道类，设置MongoDB的连接信息）
 
 3.5 执行爬虫文件开始信息爬取
 
