update: python 71.md

--- a/python/contents/71.md
+++ b/python/contents/71.md
@@ -171,7 +171,7 @@ except requests.exceptions.ConnectionError as e:
     ```
 
 - 编写代码
-    编写爬虫文件hb.py
+    * 编写爬虫文件hb.py
     ```python
     import scrapy
 
@@ -184,7 +184,7 @@ except requests.exceptions.ConnectionError as e:
             print(response.body)
     ```
 
-    编写中间件文件：middlewares.py
+    * 编写中间件文件：middlewares.py
     ```python
     class HttpbinProxyMiddleware(object):
         def process_request(self, request, spider):
@@ -192,7 +192,7 @@ except requests.exceptions.ConnectionError as e:
             request.meta['proxy'] = 'http://' + pro_addr
     ```
 
-    修改配置文件settings.py
+    * 修改配置文件settings.py
     ```python
     ROBOTSTXT_OBEY = False #关闭爬虫协议
 
